--- a/Prova_B/E04_swCase[b].html
+++ b/Prova_B/E04_swCase[b].html
@@ -11,11 +11,18 @@
     //DICA: Use PF para Pão Francês, BC para Cuca, SO para Sonho.
 
     //ENTRADA
-
+const compra = prompt(`O que voce deseja comprar; PF-Pao frances  BC- bolo-cuca   SO-sonho`)
 
     //PROCESSAMENTO
 
+switch (compra) {
+    case :
+        
+        break;
 
+    default:
+        break;
+}
     //SAÍDA
 
 </script>
